--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img class="lead__image" src="./images/lead-polka.jpg" alt="Спящая девушка в поезде">
-            <figure class="lead__caption">Ваша полка - верхняя</figure>
+            <figure class="lead__figure">
+                <img class="lead__image" src="./images/lead-polka.jpg" alt="Спящая девушка в поезде">
+                <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
+            </figure>
         </section>
 
         <section class="intro">
@@ -43,7 +45,7 @@
         <section class="photo-grid">
             <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно вагона">
             <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы в тумане">
-            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Сбака на сене">
+            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
             <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочинский лес">
             <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Автомобиль на замёрзшем озере">
             <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег Байкала">
@@ -131,13 +133,17 @@
         </section>
 
     </main>
+
     <footer class="footer">
-        <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
-        <p class="footer__copyright">&copy; 2020. Лазник Александр</p>
+        <nav class="footer__navigation">
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
+            <p class="footer__copyright">&copy; 2020. Лазник Александр</p>
+        </nav>
     </footer>
+
 </body>
 </html>
