--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
         <div class="header__lang-links">
-            <a href="#" class="header__lang-link">Ru</a>
-            <a href="#" class="header__lang-link">En</a>
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_active">En</a>
         </div>    
     </header>
 
@@ -61,7 +61,7 @@
             <article class="place">
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
@@ -74,7 +74,7 @@
             <article class="place">
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
@@ -87,7 +87,7 @@
             <article class="place">
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                 </div>
                 <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
@@ -101,7 +101,7 @@
             <article class="place">
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
@@ -114,7 +114,7 @@
             <article class="place">
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website"> 
-                    <p class="place__url-heading">URL</p>
+                    <p class="place__url-heading">url</p>
                     <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
@@ -136,13 +136,15 @@
 
     <footer class="footer">
         <nav class="footer__navigation">
-            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
-            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
-            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
-            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
-            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
-            <p class="footer__copyright">&copy; 2020. Лазник Александр</p>
-        </nav>
+            <ul class="footer__unordered-list">
+                <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
+                <li class="footer__list-item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+                <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+                <li class="footer__list-item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+                <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
+            </ul>
+        </nav>    
+        <p class="footer__copyright">&copy; 2020. Лазник Александр</p>
     </footer>
 
 </body>
