--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
         <div class="header__lang-links">
             <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-            <a href="#" class="header__lang-link header__lang-link_active">En</a>
+            <a href="#" class="header__lang-link">En</a>
         </div>    
     </header>
 
